name:          hayooCrawler
version:       0.0.0.4
license:       MIT
license-file:  LICENSE
author:        Uwe Schmidt
copyright:     Copyright (c) 2007 - 2013 Uwe Schmidt
maintainer:    Uwe Schmidt <uwe@fh-wedel.de>
stability:     experimental
category:      Text, Data
synopsis:      The Hayoo! crawler for indexing hackage documentation
description:   The Hayoo! crawler for indexing hackage documentation
               Version 0.0.0.4: Type field in FunctionInfo added
               .
               Version 0.0.0.3: Hackage2 changes
               .
               Version 0.0.0.2: Error handling in crawler added
               .
               Version 0.0.0.1: Support for JSON output
               .
               Initial version: Derived from holumbus repo
cabal-version: >=1.10
build-type:    Simple
-- tested-with:  ghc-7.6

-- ------------------------------------------------------------

executable hayooCrawler
  main-is:         HayooCrawler.hs

  other-modules:   Control.Monad.ReaderStateIOError
                 , Control.Sequential.MapFoldBinary
                 , Hayoo.FctIndexerCore
                 , Hayoo.FunctionInfo
                 , Hayoo.HackagePackage
                 , Hayoo.Haddock   
                 , Hayoo.IndexConfig
                 , Hayoo.IndexTypes
                 , Hayoo.PackageArchive
                 , Hayoo.PackageInfo
                 , Hayoo.PkgIndexerCore
                 , Hayoo.PackageRank
                 , Hayoo.Signature 
                 , Hayoo.URIConfig 
                 , Hunt.Crawler
                 , Hunt.Crawler.CacheCore
                 , Hunt.Crawler.Constants
                 , Hunt.Crawler.Core
                 , Hunt.Crawler.Html
                 , Hunt.Crawler.IndexerCore
                 , Hunt.Crawler.Logger
                 , Hunt.Crawler.PostToServer
                 , Hunt.Crawler.Robots
                 , Hunt.Crawler.RobotTypes
                 , Hunt.Crawler.Types
                 , Hunt.Crawler.URIs
                 , Hunt.Crawler.Util
                 , Hunt.Crawler.XmlArrows
                 , Hunt.Data.Crunch
                 , Hunt.Index.Common
                 , Hunt.Index.Common.BasicTypes
                 , Hunt.Index.Common.DiffList
                 , Hunt.Index.Common.DocId
                 , Hunt.Index.Common.DocIdMap
                 , Hunt.Index.Common.Document
                 , Hunt.Index.Common.LoadStore
                 , Hunt.Index.Common.Occurences
                 , Hunt.Index.Common.RawResult
                 , Hunt.Index.CompactDocuments
                 , Hunt.Index.CompactIndex
                 , Hunt.Index.CompactSmallDocuments
                 , Hunt.Index.Compression
                 , Hunt.Index.Inverted.CompressedPrefixMem
                 , Hunt.Query.Result
                 , Hunt.Utility

  build-depends:   base                   >= 4     && < 5
                 , aeson                  >= 0.6
                 , aeson-pretty           >= 0.7
                 , binary                 >= 0.5
                 , bytestring             >= 0.9
                 , bzlib                  >= 0.4   && < 1
                 , containers             >= 0.4.2
                 , data-size              >= 0.1.1
                 , data-stringmap         >= 0.9.1 && < 2
                 , deepseq                >= 1.2
                 , directory              >= 1.1
                 , filepath               >= 1     && < 2
                 , ghc-heap-view          >= 0.5
                 , hslogger               >= 1     && < 2
                 , HTTP                   >= 4000
                 -- , Hunt-Searchengine  >= 2     && < 3
                 , hxt                    >= 9.1   && < 10
                 , hxt-cache              >= 9     && < 10
                 , hxt-charproperties     >= 9     && < 10
                 , hxt-curl               >= 9     && < 10
                 , hxt-http               >= 9     && < 10
                 , hxt-regex-xmlschema    >= 9     && < 10
                 , hxt-unicode            >= 9     && < 10
                 , hxt-xpath              >= 9.1   && < 10
                 , mtl                    >= 1.1   && < 3
                 , network                >= 2.1   && < 3
                 , old-time               >= 1     && < 2
                 , parsec                 >= 2.1   && < 4
                 , parallel               >= 3.1   && < 4
                 , process                >= 1     && < 2
                 , tar                    >= 0.3   && < 1
                 , text                   >= 0.11
                 , SHA                    >= 1.4   && < 2
                 , unix                   >= 2.3   && < 3
                 , unordered-containers   >= 0.2
                 , zlib                   >= 0.5   && < 1 

  hs-source-dirs: src

  ghc-options:   -threaded
                 -Wall
                 -funbox-strict-fields
                 -rtsopts
                 -fwarn-tabs

  default-language: Haskell2010

-- ------------------------------------------------------------

source-repository head
  type:     git
  location: https://github.com/UlfS/holumbus.git

-- ------------------------------------------------------------


