name:                html-hunter
version:             0.1.0.0
synopsis:            Hunting for HTML content
description:         Extracting text out of HTML pages and prepare
                     it for feeding into the Hunt search engine
license:             MIT
license-file:        LICENSE
author:              Uwe Schmidt
maintainer:          uwe@fh-wedel.de
copyright:           Copyright 2014 Uwe Schmidt
category:            Text, Search
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable html-hunter
  main-is:             HtmlHunter.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:   base >=4.7 && <5
                 , bytestring             >= 0.10
                 , aeson                  >= 0.6
                 , aeson-pretty           >= 0.7
                 , cmdargs                >= 0.10
                 , containers             >= 0.4
                 , hunt-searchengine      >= 0.2
                 , HTTP                   >= 4000.2
                 , hunt-client
                 , hxt                    >= 9.1   && < 10
                 , hxt-http               >= 9     && < 10
                 , hxt-regex-xmlschema    >= 9     && < 10
                 , hxt-xpath              >= 9
                 , mtl                    >= 2.1
                 , network                >= 2.1
--                 , parsec                 >= 2.1   && < 4
                 , text                   >= 0.11
                 , transformers           >= 0.3
--                 , time                   >= 1.4
                      
  hs-source-dirs:      .
  default-language:    Haskell2010

  ghc-options:   -threaded
                 -rtsopts
                 -Wall
                 -fwarn-tabs
                 -funbox-strict-fields
