name:                hunt-cli
version:             0.1.0.0
synopsis:            Implement CLI for Hunt on top of hunt-client
description:         Please see README.md
homepage:            https://github.com/hunt-framework/hunt
license:             MIT
license-file:        LICENSE
author:              Matthias Metzger, Alex Biehl
maintainer:          Matthias Metzger, Alex Biehl
copyright:           2016 Matthias Metzger, Alex Biehl
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hunt-cli
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , cassava
                     , containers
                     , http-client
                     , hunt-api
                     , hunt-servant-client
                     , hunt-searchengine
                     , mtl
                     , optparse-applicative
                     , servant-client
                     , text
                     , vector
  other-modules:       Hunt.CLI
                     , Hunt.CLI.Types
                     , Hunt.CLI.Parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hunt-framework/hunt.git
