name:          hunt-client
version:       0.1
license:       MIT
license-file:  LICENSE
author:        Chris Reumann, Ulf Sauer, Sebastian Philipp
copyright:     Chris Reumann, Ulf Sauer, Sebastian Philipp
maintainer:    Chris Reumann, Ulf Sauer, Sebastian Philipp
stability:     experimental
category:      Text, Data
synopsis:      A search and indexing engine server.
homepage:      http://github.com/hunt-framework
description:   Standalone search server based on hunt searchengine
cabal-version: >=1.6
build-type:    Simple

extra-source-files:
    README

source-repository head
  type:        git
  location:    https://github.com/hunt-framework/hunt.git


library
  hs-source-dirs: src
  exposed-modules:
                Hunt.Server.Client
  build-depends:
                base >= 4
                , aeson                  >= 0.6
                , bytestring             >= 0.9.1
                , data-default
                , conduit                >= 1.0
                , failure                >= 0.2
                , hunt-searchengine
                , http-client            >= 0.2 
                , http-conduit           >= 2.0.0
                , http-types             >= 0.8
                , lens                   >= 3.10
                , mtl                    >= 1.1       && < 3
                , string-conversions     >= 0.3.0.2
                , text                   >= 1    && < 2
                , transformers           >= 0.3

  ghc-options: -Wall -funbox-strict-fields -fwarn-tabs