name:          hunt-client
version:       0.1
license:       MIT
license-file:  LICENSE
author:        Sebastian Philipp
copyright:     Sebastian Philipp
maintainer:    Sebastian Philipp
stability:     experimental
category:      Text, Data
synopsis:      A search and indexing engine server.
homepage:      http://github.com/hunt-framework
description:   Standalone search server based on hunt searchengine
cabal-version: >=1.6
build-type:    Simple

extra-source-files:
    README.md

source-repository head
  type:        git
  location:    https://github.com/hunt-framework/hunt.git


library
  hs-source-dirs: src
  exposed-modules:
    Hunt.Server.Client
    Hunt.Conduit

  build-depends:  aeson                  >= 0.6
                , aeson-pretty
                , base >= 4
                , bytestring             >= 0.9.1
                , conduit                >= 1.1 && < 1.3
                , conduit-combinators
                , conduit-extra
                , data-default
                , exceptions             >= 0.5 && < 0.7
                , http-client            >= 0.2
                , http-conduit           >= 2.0.0
                , http-types             >= 0.8
                , hunt-searchengine
                , mtl                    >= 1.1 && < 3
                , primitive
                , resourcet
                , string-conversions     >= 0.3.0.2
                , text                   >= 1    && < 2
                , transformers           >= 0.3
                , vector

  ghc-options: -Wall -funbox-strict-fields -fwarn-tabs
