name:          hunt-crawler
version:       0.0.1.0
license:       MIT
license-file:  LICENSE
author:        Uwe Schmidt
copyright:     Copyright (c) 2014 Uwe Schmidt
maintainer:    Uwe Schmidt <uwe@fh-wedel.de>
stability:     stable
category:      Text, Data
synopsis:      A library for craling web sites for the Hunt system
homepage:      http://github.com/hunt-framework
description:   This library provides functionality for crawling web sites
               and indexing them for the Hunt seach engine system.
               This is a port of the crawler library from the
               Holumbus system
cabal-version: >=1.10
build-type:    Simple
-- tested-with:   ghc-7.8

source-repository head
  type:        git
  location:    http://github.com/hunt-framework/hunt

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  exposed-modules:
    Control.Concurrent.MapFold
    Control.Monad.ReaderStateIOError
    Control.Sequential.MapFoldBinary
    Data.IntSet.Cache
    Holumbus.Crawler.CacheCore
    Holumbus.Crawler.Constants
    Holumbus.Crawler.Core
    Holumbus.Crawler
    Holumbus.Crawler.BasicTypes
    Holumbus.Crawler.Html
    Holumbus.Crawler.IndexerCore
    Holumbus.Crawler.Logger
    Holumbus.Crawler.PdfToText
    Holumbus.Crawler.Robots
    Holumbus.Crawler.RobotTypes
    Holumbus.Crawler.Types
    Holumbus.Crawler.URIs
    Holumbus.Crawler.Util
    Holumbus.Crawler.XmlArrows

  build-depends:
                base                   >= 4.8
              , binary                 >= 0.5
              , bytestring             >= 0.10.4
              , bzlib                  >= 0.4
              , containers             >= 0.4.2
              , data-stringmap         >= 0.9.5
              , deepseq                >= 1.2
              , directory              >= 1
              , filepath               >= 1
              , hslogger               >= 1
              , hxt                    >= 9.1
              , hxt-cache              >= 9
              , hxt-curl               >= 9
              , hxt-regex-xmlschema    >= 9
              , hxt-unicode            >= 9
              , mtl                    >= 1.1
              , parallel               >= 3.1
              , parsec                 >= 2.1
              , process                >= 1
              , SHA                    >= 1.4
              , text                   >= 0.11
              , unix                   >= 2.3
              , vector                 >= 0.10

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6

  hs-source-dirs: src

  ghc-options: -Wall -funbox-strict-fields -fwarn-tabs


  default-language:
                Haskell2010

  default-extensions:
                CPP
                MultiParamTypeClasses
                FlexibleContexts
                FlexibleInstances
                GeneralizedNewtypeDeriving
                TypeSynonymInstances
                LiberalTypeSynonyms

  other-extensions:
                DeriveDataTypeable
              , BangPatterns
