name:                hunt-fst
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

extra-source-files:  benchmarks/small.txt
                     benchmarks/big.txt                       
                    
library
  hs-source-dirs:      src
  exposed-modules:     Hunt.FST.Arcs
                       Hunt.FST.Compile
                       Hunt.FST.Register
                       Hunt.FST.Trie
                       Hunt.FST.Types
  build-depends:       base >= 4.7 && < 5
                     , hashable
                     , primitive
                     , text
                     , vector
  ghc-options:         -Wall
                       -O2
                       -funbox-strict-fields
  default-language:    Haskell2010

benchmark trie-insert
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmarks
  build-depends:       base
                     , criterion
                     , hunt-fst
                     , text
                     , vector
  ghc-options:         -Wall
                       -O2
                       -funbox-strict-fields
  main-is:             Trie.hs

test-suite test-fst
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hashable
                     , hunt-fst
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
