name:                hunt-fst
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

extra-source-files:  benchmarks/small.txt
                     benchmarks/big.txt                       
                    
library
  hs-source-dirs:      src
  exposed-modules:     Hunt.FST 
                       Hunt.FST.Types                       
  other-modules:       Hunt.FST.Arcs
                       Hunt.FST.Dot
                       Hunt.FST.Packed
                       Hunt.FST.Register
                       Hunt.FST.Trie
                       Hunt.FST.Trie.Lookup

  build-depends:       base >= 4.7 && < 5
                     , blaze-builder
                     , bytestring
                     , deepseq
                     , hashable
                     , primitive
                     , text
                     , unordered-containers
                     , vector
  ghc-options:         -Wall
                       -O2
                       -funbox-strict-fields
  ghc-prof-options:    -fprof-auto
  default-language:    Haskell2010

benchmark trie-insert
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmarks
  build-depends:       base
                     , bytestring
                     , criterion
                     , data-stringmap
                     , deepseq
                     , hunt-fst
                     , text
                     , vector
  ghc-options:         -Wall
                       -O2
                       -funbox-strict-fields
  ghc-prof-options:    -fprof-auto
                       -rtsopts
                       "-with-rtsopts=-p -hy"
  main-is:             Trie.hs

test-suite test-fst
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hunt-fst
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
