name:          hunt-searchengine
version:       0.3.0.1
license:       MIT
license-file:  LICENSE
author:        Chris Reumann, Ulf Sauer, Uwe Schmidt
copyright:     Chris Reumann, Ulf Sauer, Uwe Schmidt
maintainer:    Chris Reumann, Ulf Sauer, Uwe Schmidt
stability:     experimental
category:      Text, Data
synopsis:      A search and indexing engine.
homepage:      http://github.com/hunt-framework/
description:   The Hunt-Searchengine library provides a toolkit to
               create fast and flexible searchengines.
cabal-version: >=1.8
build-type:    Simple
-- tested-with:   ghc-7.6.3

-- extra-source-files:
--     README

-- enable with cabal test -ftest-strict
flag test-strict
  default:      False
  manual:       True

source-repository head
  type:        git
  location:    https://github.com/hunt-framework/hunt-searchengine.git

library

  build-depends: base                   >= 4.5  && < 5
               , aeson                  >= 0.6
               , aeson-pretty           >= 0.7
               , binary                 >= 0.5  && < 1
               , bytestring             < 1
               , containers             >= 0.5
               , data-r-tree            >= 0.0.5.0
               , data-stringmap         >= 1.0.1.1 && < 2
               , data-default
               , deepseq                >= 1.2
               , dlist
               , filepath               >= 1
               , hslogger               >= 1    && < 2
               , hxt-regex-xmlschema    >= 9.1
               , monad-parallel         >= 0.7
               , mtl                    >= 1.1  && < 3
               , murmur-hash
               , parsec                 >= 2.1  && < 4
               , text                   >= 1    && < 1.2
               , time                   >= 1.4  && < 2
               , transformers           >= 0.3
               , unordered-containers   >= 0.2
               , vector                 >= 0.10

  exposed-modules:
    Control.Concurrent.XMVar

    Data.Bijection
    Data.Bijection.Instances
    Data.IntMap.BinTree.Strict
    Data.IntSet.Cache
    Data.LimitedPriorityQueue
    Data.Text.Binary
    Data.Typeable.Binary

    GHC.Fingerprint.Binary
    GHC.Stats.Json

    Hunt.ClientInterface

    Hunt.Common
    Hunt.Common.ApiDocument
    Hunt.Common.BasicTypes
    Hunt.Common.DocDesc
    Hunt.Common.DocId
    Hunt.Common.DocIdMap
    Hunt.Common.DocIdSet
    Hunt.Common.Document
    Hunt.Common.Occurrences
    Hunt.Common.Positions
    Hunt.Common.RawResult
    Hunt.Common.IntermediateValue

    Hunt.Index.Schema
    Hunt.Index.Schema.Analyze
    Hunt.Index.Schema.Normalize.Date
    Hunt.Index.Schema.Normalize.Position
    Hunt.Index.Schema.Normalize.Int

    Hunt.Index
    Hunt.Index.IndexImpl
    Hunt.Index.PrefixTreeIndex
    Hunt.Index.PrefixTreeIndex2Dim
    Hunt.Index.RTreeIndex
    Hunt.Index.InvertedIndex

    Hunt.Index.Proxy.KeyIndex

    Hunt.DocTable
    Hunt.DocTable.HashedDocTable

    Hunt.ContextIndex

    Hunt.Interpreter
    Hunt.Interpreter.BasicCommand
    Hunt.Interpreter.Command

    Hunt.Query.Fuzzy
    Hunt.Query.Intermediate
    Hunt.Query.Language.Grammar
    Hunt.Query.Language.Parser
    Hunt.Query.Language.Builder
    Hunt.Query.Processor
    Hunt.Query.Ranking
    Hunt.Query.Result

    Hunt.Utility
    Hunt.Utility.Log
    Hunt.Utility.Output

  hs-source-dirs: src

  ghc-options: -Wall -funbox-strict-fields -fwarn-tabs -threaded

  extensions: MultiParamTypeClasses
              FlexibleContexts
              OverloadedStrings
              TypeFamilies
              ConstraintKinds
              KindSignatures
              CPP

test-suite Hunt-Tests
  hs-source-dirs:       test
  main-is:              Hunt.hs
  other-modules:        Hunt.AnalyzerTests
                        Hunt.IndexTests
                        Hunt.InterpreterTests
                        Hunt.QueryParserTests                     
                        Hunt.TestHelper
                        Hunt.Index.ContextIndexTests
                        Hunt.Index.Default
                        Hunt.Index.Helper
                        Hunt.Index.IndexValueTests

  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  extensions:           OverloadedStrings

  build-depends: base
               , containers
               , HUnit
               , QuickCheck
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , text
               , old-locale
               , time
               , aeson
               , binary
               , hunt-searchengine
               , mtl
               , random
               , directory
               , data-default
               , data-r-tree
               , monad-parallel

test-suite Hunt-Strictness
   hs-source-dirs:       test
   main-is:              Strictness.hs
   other-modules:        Hunt.Strict.ContextIndex
                         Hunt.Strict.DocTable
                         Hunt.Strict.Helper
                         Hunt.Strict.Index

   type:                 exitcode-stdio-1.0
   ghc-options:          -Wall
   extensions:           OverloadedStrings

   if !flag(test-strict)
     buildable: False
   else
     build-depends: base
                  , containers
                  , deepseq
                  , ghc-heap-view                >= 0.5
                  , HUnit
                  , hunt-searchengine
                  , mtl
                  , QuickCheck
                  , random                       >= 1.0
                  , test-framework
                  , test-framework-hunit
                  , test-framework-quickcheck2
                  , text
                  , aeson
                  , unordered-containers
                  , time
                  , old-locale
                  , monad-parallel
                  , data-default
